# pypack

build-example/: README.md  pyproject.toml  setup.cfg
build-example/build_example/: main.py
build-example/tests/: test_main.py
