[metadata]
name = python-packaging-example
version = 1.0.0
author = Your Name
author_email = your@email.com
description = A sample Python project showcasing packaging techniques
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your-username/python-packaging-example

[options]
packages = find:
install_requires =
    requests

[options.packages.find]
exclude =
    tests

[options.entry_points]
console_scripts =
    build-example = build_example.main:main

[build-system]
requires = ["setuptools", "wheel", "build"]
build-backend = "build.backend"